# moe_topk_routing_experiment

./: .gitattributes  .gitignore  README.md  pyproject.toml
configs/: curated_probe_pilot.json  deep_kgrid_same_compute_10seed.json  large_model_same_compute_pilot.json  robust_curated_probe_9seed.json  robust_same_compute_9seed.json  robust_same_compute_aux005_9seed.json  robust_same_compute_aux0_9seed.json  same_compute_pilot.json  scratch_pilot.json  sparse32_kgrid_fixed_step_3seed.json  sparse32_kgrid_fixed_step_seed3to7.json  sparse32_kgrid_mechanism_3seed.json  sparse32_kgrid_same_compute_seed3to7.json
docs/: experiment_results_so_far.md  feasible_experiment_scope.md  presentation_export.md  remote_runbook.md  repository_handoff.md  sparse32_baseline_analysis.md  sparse32_experiment_report.md  sparse32_full_report.md  sparse32_presentation.html  sparse32_presentation.md
probes/: curated_probe.jsonl
results/: mismatch_asymmetry_analysis.json
scripts/: _check_remaining_baselines.py  _local_baseline_calc.py  analyze_full_ranking.py  analyze_mismatch_asymmetry.py  analyze_router_representation_mechanism.py  analyze_routing_diagnostics.py  analyze_task_loss_grid.py  analyze_task_specialization.py  analyze_training_variability_null.py  backfill_completed_analysis.sh  build_combined_run.py  build_presentation_html.py  build_visual_assets.py  check_background.sh  collect_compact_results.sh  compare_sparse32_budgets.py  export_heatmap_data.py  generate_report_heatmaps.py  launch_background.sh  launch_baseline_analysis.sh  launch_deep_kgrid_queue.sh  reanalyze_run.py  (+14 more)
(+170 files in other folders)
