[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "moe-topk-routing-experiment"
version = "0.1.0"
description = "TinyMoE experiments for train-time and inference-time top-k routing mismatch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7,<4",
  "numpy>=1.24,<3",
  "scipy>=1.10,<2",
  "torch>=2.1,<3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
